After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776863 - Shortcuts window is attached to the wrong workbench
Shortcuts window is attached to the wrong workbench
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-04 14:33 UTC by Dimitrios Christidis
Modified: 2017-01-05 02:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
application: use most-recent workbench for shortcuts parent (1.09 KB, patch)
2017-01-05 02:53 UTC, Christian Hergert
committed Details | Review

Description Dimitrios Christidis 2017-01-04 14:33:32 UTC
When working on multiple projects and launching the keyboard shortcuts window, it does not appear attached to the currently focused workbench. Instead, it is attached to the least recently used one.
Comment 1 Christian Hergert 2017-01-05 02:53:57 UTC
Created attachment 342918 [details] [review]
application: use most-recent workbench for shortcuts parent

We were not breaking after finding the first match, so we ended up showing
the window above the least recently used window. Instead we want the first
match (they are reordered when focused).
Comment 2 Christian Hergert 2017-01-05 02:54:58 UTC
Thanks for reporting!

Attachment 342918 [details] pushed as 9dd5897 - application: use most-recent workbench for shortcuts parent