application: use most-recent workbench for shortcuts parent

We were not breaking after finding the first match, so we ended up showing
the window above the least recently used window. Instead we want the first
match (they are reordered when focused).

https://bugzilla.gnome.org/show_bug.cgi?id=776863